--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "./.svelte-kit/tsconfig.json",
     "compilerOptions": {
-        "baseUrl": ".",
+        // "baseUrl": ".",
         "resolveJsonModule": true,
         "paths": {
             "$app/*": [
