--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@slidy/react",
-    "version": "1.2.0",
+    "version": "1.2.1",
     "description": "Simple, configurable & reusable carousel component built with ReactJS",
     "main": "dist/slidy.cjs",
     "module": "dist/slidy.mjs",
@@ -50,10 +50,10 @@
     },
     "homepage": "https://github.com/Valexr/Slidy/tree/master/packages/react",
     "devDependencies": {
-        "@slidy/animation": "workspace:*",
-        "@slidy/assets": "workspace:*",
-        "@slidy/core": "workspace:*",
-        "@slidy/easing": "workspace:*"
+        "@slidy/animation": "workspace:^",
+        "@slidy/assets": "workspace:^",
+        "@slidy/core": "workspace:^",
+        "@slidy/easing": "workspace:^"
     },
     "dependencies": {
         "@types/react": "^18.3.12",
