--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -67,14 +67,13 @@
 		"@slidy/assets": "workspace:^",
 		"@slidy/easing": "workspace:^",
 		"@tsconfig/svelte": "^5.0.4",
-		"css-tree": "^2.3.1",
-		"esbuild-svelte": "^0.8.2",
+		"css-tree": "^3.0.1",
+		"esbuild-svelte": "^0.9.0",
 		"eslint-plugin-svelte": "^2.46.1",
 		"prettier-plugin-svelte": "^3.3.2",
 		"svelte": "^5.2.11",
 		"svelte-check": "^4.1.0",
-		"svelte-preprocess": "^6.0.3",
-		"svelte2tsx": "^0.6.27"
+		"svelte-preprocess": "^6.0.3"
 	},
 	"peerDependencies": {
 		"svelte": "^5.0.0"
