--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,8 +14,8 @@
         "dev": "node esbuild --dev",
         "build": "node esbuild && tsc --project tsconfig.build.json && node ../../env/dts",
         "build:local": "pnpm build -r --filter=@slidy/react...",
-        "lint": "eslint './src/**/*.{js,ts}'",
-        "lint:fix": "eslint --fix './src/**/*.{js,ts}'",
+        "lint": "eslint './src/**/*.{js,ts,jsx,tsx}'",
+        "lint:fix": "eslint --fix './src/**/*.{js,ts,jsx,tsx}'",
         "format": "prettier --write '**/*.{ts,tsx,md,svelte,json,html,css}'",
         "pub": "pnpm build && pnpm publish --no-git-checks --access public"
     },
