@slidy/plugins — fix exports

--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -2,6 +2,8 @@
     "name": "@slidy/plugins",
     "version": "1.2.0",
     "description": "Simple plugins functions for @slidy/core",
+    "unpkg": "dist/index.js",
+    "jsdelivr": "dist/index.js",
     "main": "dist/index.cjs",
     "module": "dist/index.mjs",
     "types": "dist/index.d.ts",
@@ -11,7 +13,11 @@
     ],
     "exports": {
         ".": {
-            "browser": "./dist/index.js",
+            "browser": {
+                "import": "./dist/index.mjs",
+                "require": "./dist/index.cjs",
+                "default": "./dist/index.js"
+            },
             "types": "./dist/index.d.ts",
             "require": "./dist/index.cjs",
             "import": "./dist/index.mjs"
